--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,37 +1,35 @@
 # pull official base image
 FROM node:alpine as build
 ARG REACT_APP_BACKEND_URL
+ARG WORKSPACE
 ENV REACT_APP_BACKEND_URL=$REACT_APP_BACKEND_URL
+ENV WORKSPACE=$WORKSPACE
 ENV GENERATE_SOURCEMAP=false
 ENV CI=false
 
 RUN apk update && apk upgrade --no-cache && \
-		apk add --no-cache \
-		curl \
-		wget \
-		vim
+		apk add --no-cache
 
 # set working directory
-WORKDIR /app
+WORKDIR ${WORKSPACE}
 
 # add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
 
 # install app dependencies
-COPY /geomean-ic50-flagger/frontend/package*.json ./
+COPY ${WORKSPACE}/package*.json ./
 RUN npm install 
 
 # add app test & build
-COPY /geomean-ic50-flagger/frontend ./
+COPY ${WORKSPACE}/ ./
 
 RUN npm run test
 RUN npm run build
 
 FROM nginx:alpine
-# COPY --from=build /app/nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/build /usr/share/nginx/html
 RUN apk update \
-  && apk add curl \
+  && apk add curl vim \
   && sed -i '/location \/ {$/a try_files \$uri \/index.html;' /etc/nginx/conf.d/default.conf
 
 EXPOSE 80 
